# NEXRAD

./: .appveyor.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  download-goes.py  download-nexrad.py  download_nexrad.py  mypy.ini  n0q.wld  nexrad.py  plot-nexrad.py  plot_nexrad.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: cmap.py
nexrad_quickplot/: __init__.py  io.py  plots.py
nexradutils/: __init__.py  io.py  plots.py
src/nexradutils/: download.py  io.py  plot.py
src/nexradutils/tests/: test_mod.py  test_scripts.py
tests/: Test.py  test_all.py  test_mod.py  test_scripts.py
