[metadata]
name = nexradutils
version = 0.6.8
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/nexradutils
description = easily download and plot NEXRAD weather radar reflectivity data
keywords =
  nexrad
  weather radar
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  imageio>=2.3
  xarray
  requests

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plots =
  cartopy
  matplotlib
  seaborn
  cython  # for scikit-image
  scikit-image
