[metadata]
name = NEXRAD-quickplot
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/nexradutils
description = easily download and plot NEXRAD weather radar reflectivity data
keywords =
  nexrad
  weather radar
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  imageio>=2.3
  xarray
  requests
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plots =
  cartopy
  matplotlib
  seaborn
  cython  # for scikit-image
  scikit-image
